// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`isSelected renders true when specified 1`] = `
<tr
  class="ouiTableRow ouiTableRow-isSelected"
>
  <td
    class="ouiTableRowCell"
  >
    <div
      class="ouiTableCellContent"
    >
      <span
        class="ouiTableCellContent__text"
      />
    </div>
  </td>
</tr>
`;

exports[`renders OuiTableRow 1`] = `
<tr
  aria-label="aria-label"
  class="ouiTableRow testClass1 testClass2"
  data-test-subj="test subject string"
>
  <td
    class="ouiTableRowCell"
  >
    <div
      class="ouiTableCellContent"
    >
      <span
        class="ouiTableCellContent__text"
      >
        hi
      </span>
    </div>
  </td>
</tr>
`;
